fix invisible text

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  background-color: #242424;
+ 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,10 +15,9 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+
   text-decoration: inherit;
 }
-
 
 body {
   margin: 0;
@@ -43,17 +42,4 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-  
-  }
-  a:hover {
-    color: #747bff;
-  }
-  
 }
